# mARCH-cli

./: .env.example  .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  PROJECT_STRUCTURE.md  README.md  SETUP.md  USAGE.md  pyproject.toml  verify_mode_switching.py
.copilot/: ignore  instructions.md
.github/skills/aes/: SKILL.md  aes.schema.json  validate_aes.py
docs/: EXTENSIONS.md
scripts/march/: .march-checkpoint.json  DECISIONS.md  FEATURE_CONTEXT.md  aes.json  progress.jsonl
scripts/march/archive/: aes-20260503-094025.json  aes-20260503-102629.json  aes-20260503-112041.json  aes-20260503-161338.json  aes-20260503-193710.json  aes.json  aes2.json
scripts/ralph/: aes.json
src/copilot/: __init__.py  agent.py  agent_state.py  ai_client.py  cli.py  clipboard.py  code_intelligence.py  config.py  exceptions.py  github_api.py  github_auth.py  github_context.py  github_integration.py  image_utils.py  logging_config.py  lsp_client.py  lsp_config.py  mcp_integration.py  platform_utils.py  slash_commands.py  state_persistence.py  syntax_highlight.py  tree_sitter.py  tui.py  tui_banner.py  tui_conversation.py  tui_layout.py  ui.py  validation.py
src/mARCH/: __init__.py  agent.py  ai_client.py  cli.py  clipboard.py  config.py  exceptions.py  github_api.py  github_integration.py  logging_config.py  lsp_client.py  ripgrep_search.py  slash_commands.py  tui.py  tui_conversation.py  tui_layout.py  validation.py
src/mARCH/agent/: __init__.py  agent_executor.py  agent_fsm.py  context.py  context_inheritance.py  error_recovery.py  knowledge_base.py  resilience.py  rpc_service.py
src/mARCH/analysis/: __init__.py  correlation_analyzer.py  file_aggregator.py  pattern_extractor.py
src/mARCH/cli/: __init__.py  cli.py  file_search.py  mention_store.py  plan_display.py  repl.py
src/mARCH/code_intelligence/: code_intelligence.py  syntax_highlight.py  tree_sitter.py
src/mARCH/config/: config.py  lsp_config.py
src/mARCH/core/: __init__.py  agent_state.py  ai_client.py  async_executor.py  autopilot_executor.py  context_compaction.py  custom_instructions.py  execution_mode.py  payload_handler.py  plan_generator.py  plan_mode.py  process_manager.py  prompts.py  shell_executor.py  slash_commands.py  stream_buffer.py  task_executor.py  task_types.py
src/mARCH/extension/: __init__.py  api.py  cli_command.py  contracts.py  discovery.py  lifecycle.py  manager.py  manifest.py  permissions.py  protocol.py  registry.py  sandbox.py  tool.py  types.py
tasks/prd-fix-plan-mode/: prd-review-fixes.md
tasks/prd-mode-toggle/: prd.md
tasks/prd-plan-mode/: prd.md
tasks/prd-prompt-system/: prd-review-fixes.md  prd.md
tasks/prd-reduce-context-overhead/: prd.md
tasks/prd-review-fixes/: prd-review-fixes.md
tasks/prd-test-cleanup/: prd.md
tasks/prd-test-suite-cleanup/: prd-review-fixes.md
tasks/prd-tui-functional/: prd.md
tasks/prd-tui-functional-conversation/: prd-review-fixes.md
tasks/prd-tui-rewrite/: prd-review-fixes.md  prd.md
tests/: conftest.py  test_analysis_extension.py  test_analysis_multifile.py  test_extension_cli_command.py  test_extension_contracts.py  test_extension_discovery.py  test_extension_integration.py  test_extension_lifecycle.py  test_extension_manager.py  test_extension_manifest.py  test_extension_protocol.py  test_extension_registry.py  test_extension_sandbox.py  test_extension_tool.py  test_networking_connection.py  test_networking_http_client.py  test_networking_payload.py  test_networking_resilience.py  test_networking_rpc.py  test_networking_transport.py  test_phase0_tui_and_modes.py  test_phase1_foundation.py  test_phase1_phase2.py  test_phase2_cli.py  test_phase3_github.py  test_phase4_code_intelligence.py  test_phase5_tui.py  test_phase6_agent.py  test_phase7_config.py  test_phase8_platform.py  test_phase9_validation.py  test_repl_mode_switching.py  test_tui_rewrite.py
tests/tasks/: test_bash_executor.py  test_file_executor.py
(+71 files in other folders)
